--- a/src/index.html
+++ b/src/index.html
@@ -4,12 +4,44 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="styles.css" rel="stylesheet" />
+   
     <title>Currency Converter</title>
 </head>
 <body>
    <header class="header">
        Currency Converter
     </header>
+    <div class="content">
+      <div class="row">
+        <div class="column">
+            <div class="column__header">
+                From currency
+            </div>
+            <div class="column__cur">
+                <select name="from_currency">
+                    <!-- <option value="1">1</option>
+                    <option value="2">2</option> -->
+                </select>
+
+                <input type="text" name="from_currency"/>
+              
+            </div>
+        </div>
+        <div class="column">
+            <div class="column__header">
+                To currency
+            </div>
+            <div class="column__cur">
+                <select name="to_currency">
+                    <!-- <option value="1">1</option>
+                    <option value="2">2</option> -->
+                </select>
+
+                <input type="text" name="to_currency"/>
+            </div>
+        </div>
+      </div>
+
+    </div>
 </body>
 </html>
