--- a/src/index.html
+++ b/src/index.html
@@ -23,7 +23,7 @@
                     <option value="2">2</option> -->
                 </select>
 
-                <input type="text" name="from_currency"/>
+                <input type="text" name="from_input" id="from_input"/>
               
             </div>
         </div>
@@ -37,7 +37,7 @@
                     <option value="2">2</option> -->
                 </select>
 
-                <input type="text" name="to_currency"/>
+                <input type="text" name="to_input" id="to_input"/>
             </div>
         </div>
       </div>
